--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a,
 
 .header {
     width: 100%;
-    padding: 15px 0px;
+    padding: 15px 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -182,6 +182,7 @@ section {
     align-items: center;
     gap: 5rem;
     height: 85vh;
+    gap: 20px;
 }
 
 .section_pic_container {
