Standardised fonts for windows and mac.

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,14 @@
   
   body {
     @apply text-gray-700 bg-white;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+  }
+  
+  * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
